feat(magic-accessor): 添加 Magic.install() 方法调用在MagicAccessorImpl方案中，并更新 README 依赖项